initiation of fixing reviews on mobile

--- a/src/styles/Hire.css
+++ b/src/styles/Hire.css
@@ -99,3 +99,6 @@
         transform: rotate(0deg);
     }
 }
+@media screen and (min-width: 900px) and (max-width: 1200px) {
+    
+}
