--- a/src/styles/Testimonials.css
+++ b/src/styles/Testimonials.css
@@ -28,4 +28,9 @@
     100%{
         transform: rotate(180deg);
     }
-    }
+}
+@media screen and (min-width: 320px) and (max-width: 900px) {
+    .testimonials__wrapper{
+        padding: 1rem;
+    }   
+}
